--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <body>
     <h1>김민영 웹툴.Zip</h1>
     <a href="uiEditor.html">
-        <h2>UI Editor (2019.06.21)</h2>
-        <h2>vuestargram</h2>
-    </a>
+        <h2>UI Editor (2019.06.21)</h2>    </a>
 </body>
 </html>
