--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>김민영 웹툴.Zip</h1>
     <a href="uiEditor.html">
         <h2>UI Editor (2019.06.21)</h2>    </a>
+    <a href="/new ysnzp/new_ysnzp.html">
+        <h2>뉴 용산집(2019.07.09)</h2>
+    </a>
 </body>
 </html>
