--- a/video_test/video_test.html
+++ b/video_test/video_test.html
@@ -12,6 +12,7 @@
 	</style>
 </head>
 <body>
+	hello
 	<div class="video-view">
 		<video autoplay loop muted>
 			<source src="/video/sp_main_animation_mobile.mp4" type="video/mp4">
