--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,8 +13,8 @@
     <a href="/new ysnzp/new_ysnzp.html">
         <h2>뉴 용산집(2019.07.09)</h2>
     </a>
-    <a href="/video_test/video_test.html">
-        <h2>간지나는 포트폴리오를 위한 비디오 테스트</h2>
+    <a href="/video_test/index.html">
+        <h2>간지나는 포트폴리오를 위한 비디오 테스트으</h2>
     </a>
 </body>
 </html>
