--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="/new ysnzp/new_ysnzp.html">
         <h2>뉴 용산집(2019.07.09)</h2>
     </a>
-    <a href="/video_test/index.html">
+    <a href="/video_test/video_test.html">
         <h2>간지나는 포트폴리오를 위한 비디오 테스트으</h2>
     </a>
 </body>
