--- a/video_test/video_test.html
+++ b/video_test/video_test.html
@@ -14,11 +14,11 @@
 <body>
 	<div class="video-view">
 		<video autoplay loop muted>
-			<source src="../video/sp_main_animation_mobile.mp4" type="video/mp4">
+			<source src="/video_test/video/sp_main_animation_mobile.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
 		<video autoplay loop muted>
-			<source src="../video/video-thecalli.mp4" type="video/mp4">
+			<source src="/video_test/video/video-thecalli.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
 	</div>
