--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="/video_test/video_test.html">
         <h2>간지나는 포트폴리오를 위한 비디오 테스트으</h2>
     </a>
-    <a href="/tempest/index.html">
+    <a href="https://mykim1997.github.io/mytempest/">
         <h2>쇼핑몰</h2>
     </a>
 </body>
