--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <a href="/video_test/video_test.html">
         <h2>간지나는 포트폴리오를 위한 비디오 테스트으</h2>
     </a>
-    <a href="https://mykim1997.github.io/mytempest/">
-        <h2>쇼핑몰</h2>
+    <a href="/textarea/index.html">
+        <h2>앱솔루트 픽시드 모바일 테스트</h2>
     </a>
 </body>
 </html>
