--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="/textarea/absolute.html">
         <h2>텍스트에리어 - absolute </h2>
     </a>
-    <a href="/vuetest/index.html">
+    <a href="/vuetest">
         <h2>뷰 테스트페이지</h2>
     </a>
 </body>
